add training goals

--- a/Training/MCX2024_1E_pmcx_training.ipynb
+++ b/Training/MCX2024_1E_pmcx_training.ipynb
@@ -32,13 +32,22 @@
       "cell_type": "markdown",
       "source": [
         "![Workshop Logo](https://mcx.space/wiki/upload/mcx24_logo.png)\n",
-        "# MCX Training Workshop 2024 - Day 1, Session 1.E\n",
+        "# MCX Training Workshop 2024 - Day 1, Session 1E\n",
         "\n",
         "\n",
-        "## Session 1.E: PMCX training"
+        "## Session 1E: PMCX Training"
       ],
       "metadata": {
         "id": "uSoLXh4VE3ED"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> **Training Goals**: <font color='green'>In this unit, we show you how to use MCX's Python binding, `pmcx`, to create simulations in the Python environments.Particularly, we show visualization of time-resolved data, partial pathlength calculations and photon replay.</font>"
+      ],
+      "metadata": {
+        "id": "AW7eaH9l-rta"
       }
     },
     {
@@ -89,24 +98,25 @@
     {
       "cell_type": "code",
       "source": [
+        "import pmcx            ## load pmcx module, the actual binary module is `_pmcx`, which exports two core functions - gpuinfo() and run()\n",
         "import numpy as np\n",
-        "import pmcx\n",
         "import jdata as jd\n",
         "from matplotlib import pyplot as plt\n",
         "from MCXWorkshop2024pyPlot import plot_3d_slices\n",
         "import copy\n",
         "\n",
-        "pmcx.__version__   # print imported pmcx version number"
+        "pmcx.__version__   # print imported pmcx version number\n",
+        "#dir(pmcx)         # listing all functions in pmcx module"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         },
         "id": "DuBvrUtRzglW",
-        "outputId": "58b1825c-18c6-4282-ed1a-17287c2cc100"
+        "outputId": "42b9dcd1-e7b7-4620-e272-94190142473c"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +129,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -136,7 +146,7 @@
         "id": "gPoQUihGzhid",
         "outputId": "ab013e77-2872-484d-c2f6-aac60d15e7c7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -177,15 +187,15 @@
         "  * Machine learning tools are mostly in Python (e.g. [Pytorch](https://pytorch.org/), [Tensorflow](https://www.tensorflow.org/))\n",
         "\n",
         "* Cons of using Python (difference between Python and MATLAB):\n",
-        "  * MATLAB uses column-major order for arrays, while Python uses row-major order.\n",
-        "  * MATLAB indexing starts from 1, whereas Python indexing starts from 0.\n",
-        "  * Python doesn't have MATLAB's `varargout` feature for returning a variable number of outputs directly. In Python, we need to define the flags to determine and control the number of outputs returned.\n",
+        "  * MATLAB uses column-major (F-order) order for arrays, while Python uses row-major (C-order) order - `pmcx` automatically converts C-order arrays to F-order arrays which is the array order used internally in MCX.\n",
+        "  * MATLAB array index starts from 1, whereas Python/numpy array index starts from 0.\n",
+        "  * in MCXLAB, the number of requested output parameters automatically decides whether to save detected photon, or seeds or trajectories; unfortunately Python does not expose output variable number to a function; therefore, to enable/disable certain outputs, one must sets the appropriate cfg flags (such as `cfg['issavedet']` or `cfg['issaveseed']`.\n",
         "\n",
-        "`pmcx` allows users to run mcx simulation in Python environment, seamlessly connecting with the data analysis tools on Python. `pmcx` also handles both column-major input and row-major input.\n",
+        "`pmcx` allows users to run mcx simulation in Python environment, seamlessly connecting with the data analysis tools provided in Python. `pmcx` also handles both column-major input and row-major input.\n",
         "\n",
         "There are two main ways to run `pmcx`:\n",
         "1. using cfg as a dictionary variable:\n",
-        "```\n",
+        "```python\n",
         "import pmcx\n",
         "cfg = {\n",
         "       'nphoton': 1000000,\n",
@@ -200,7 +210,7 @@
         "res = pmcx.mcxlab(cfg)\n",
         "```\n",
         "2. Positional parameters:\n",
-        "```\n",
+        "```python\n",
         "import pmcx\n",
         "res = pmcx.run(nphoton=1000000, vol=np.ones([60, 60, 60], dtype='uint8'),\n",
         "               tstart=0, tend=5e-9, tstep=5e-9, srcpos=[30,30,0], srcdir=[0,0,1],\n",
@@ -288,7 +298,7 @@
       "metadata": {
         "id": "tPt5JhaAWHc-"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,25 +308,10 @@
         "res = pmcx.mcxlab(cfg)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "93bR61cs1Y6I",
-        "outputId": "69e5e527-b85a-4b3e-953a-ea8a1617a942"
+        "id": "93bR61cs1Y6I"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "nphoton: 1e+07\n",
-            "tstart: 0\n",
-            "tstep: 1e-10\n",
-            "tend: 5e-09\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -333,7 +328,7 @@
         "axs[2].set_title('Second time step')\n",
         "\n",
         "plt.tight_layout()\n",
-        "plt.show()\n"
+        "plt.show()"
       ],
       "metadata": {
         "colab": {
@@ -343,7 +338,7 @@
         "id": "h-v3DbjrHO7B",
         "outputId": "0a274353-c93b-4092-f14d-8c8cd2baea86"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +400,7 @@
         "id": "V-600IXc9GPv",
         "outputId": "d9b33662-e392-4676-9609-71162a90377d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -19154,7 +19149,7 @@
         "id": "P_iBEF6q4ivj",
         "outputId": "c1b92964-49bf-4934-ca9f-3d9cd63b2c87"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -19234,7 +19229,7 @@
         "id": "iPg8cZDBILwP",
         "outputId": "388e176e-0677-4947-f079-89eac95d4dcf"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -19323,7 +19318,7 @@
       "metadata": {
         "id": "6CoGSgxQZ3Kj"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -19339,7 +19334,7 @@
         "id": "_Wp0CTjZaYzl",
         "outputId": "c1206a51-416e-43ce-8549-4b2a878bd784"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -19366,7 +19361,7 @@
         "id": "A9PlrBNz7Wfd",
         "outputId": "d9547093-8c66-4258-9ea6-58b1ed88e59e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -19442,7 +19437,7 @@
         "id": "8ryB3Wai7XMk",
         "outputId": "348e3dce-e70d-4329-dcd1-796b9330fd3f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -19476,7 +19471,7 @@
         "id": "tQTPTCGz7cz1",
         "outputId": "b9a81b8f-a0e0-45b2-9b6d-b8a1fed8aabe"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -19497,10 +19492,10 @@
         "In this example, we will show the replay in photon simulations. Replay involves storing photon paths and previously recorded seeds. By saving the seeds, replay can create Jacobians matrix for absorption and scattering coefficients, which is crucial for applications like diffuse optical tomography (DOT).\n",
         "\n",
         "We will cover the following topics:\n",
-        "* <b>Use replay to generate jaobian matrix: </b></br>\n",
+        "* <b>Use replay to generate the Jaobian matrix: </b></br>\n",
         "  Learn how to use replay in photon simulation to generate a Jacobian matrix.\n",
         "\n",
-        "* <b>File exchange between Octave/MATLAB and Python: </b></br>\n",
+        "* <b>Data exchange between Octave/MATLAB and Python: </b></br>\n",
         "  Understand the process of exchanging data files between Octave/MATLAB and Python. This allows users to perform simulation in the Octave/MATLAB environment and then visualize or analyze the results in the Python environment, using Python's libraries for machine learning and data analysis."
       ],
       "metadata": {
@@ -19553,7 +19548,7 @@
       "metadata": {
         "id": "Naq1KEXLJBP-"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -19579,7 +19574,7 @@
         "cfg.issrcfrom0=1;                  % set this flag to ensure src/det coordinates align with voxel space\n",
         "cfg.issaveseed=1;     %%!important!% set this flag to store detected photon seed data\n",
         "\n",
-        "[fluence,detphoton,vol,seeds,trajectory]=mcxlab(cfg);"
+        "[fluence,detphoton,vol,seeds]=mcxlab(cfg);"
       ],
       "metadata": {
         "id": "V66Y1QyDNukw",
@@ -19598,7 +19593,7 @@
         "cfg_replay.detphotons = detphoton;\n",
         "cfg_replay.outputtype = 'jacobian';\n",
         "\n",
-        "[fluence2,detphoton2,vol2,seed2,trajectory2] = mcxlab(cfg_replay);"
+        "[fluence2,detphoton2,vol2,seed2] = mcxlab(cfg_replay);"
       ],
       "metadata": {
         "id": "EtOU4jTUPTia",
@@ -19623,7 +19618,7 @@
         "id": "hqHKqkPrEkDB",
         "outputId": "03c46aa2-f285-4665-a00a-0d4ed289518e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -19663,7 +19658,7 @@
       "metadata": {
         "id": "VVrDM8-xE0qq"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -19681,7 +19676,7 @@
         "id": "RPZxQWtrQIov",
         "outputId": "150547a4-f4b0-4257-d7c7-9d6a777c04cd"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -19718,7 +19713,7 @@
         "id": "1xnv-wHZE4CJ",
         "outputId": "8e48725e-d158-4b6a-823f-7d9d4b0b6d2c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -19783,7 +19778,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Note: `pmcx` is still being developed. If you're missing any features from MATLAB that aren't in Python yet, or if you find any bugs while using `pmcx` toolbox, please let us know!"
+        "Note: `pmcx` is still being developed. If you're missing any features from MATLAB that aren't in Python yet, or if you find any bugs while using `pmcx` toolbox, please let us know!\n",
+        "\n",
+        "The [MCX utility MATLAB functions](https://github.com/fangq/mcx/tree/master/utils) that have been ported to pmcx include the following"
       ],
       "metadata": {
         "id": "fzr2GOvKcmBP"
@@ -19791,12 +19788,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dir(pmcx)"
+      ],
       "metadata": {
-        "id": "pgpRNYZ0c4jO"
+        "id": "qM2IqzGrEpSK",
+        "outputId": "fbb63ece-1f4e-4bce-8b4c-69d914b175fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['__all__',\n",
+              " '__builtins__',\n",
+              " '__cached__',\n",
+              " '__doc__',\n",
+              " '__file__',\n",
+              " '__loader__',\n",
+              " '__name__',\n",
+              " '__package__',\n",
+              " '__path__',\n",
+              " '__spec__',\n",
+              " '__version__',\n",
+              " 'bench',\n",
+              " 'cwdref',\n",
+              " 'detphoton',\n",
+              " 'dettime',\n",
+              " 'dettpsf',\n",
+              " 'detweight',\n",
+              " 'getdistance',\n",
+              " 'gpuinfo',\n",
+              " 'mcxlab',\n",
+              " 'meanpath',\n",
+              " 'meanscat',\n",
+              " 'run',\n",
+              " 'tddiffusion',\n",
+              " 'utils',\n",
+              " 'version']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
