add training goals

--- a/Training/MCX2024_2A_iso2mesh_training.ipynb
+++ b/Training/MCX2024_2A_iso2mesh_training.ipynb
@@ -19,8 +19,17 @@
         "![Workshop Logo](https://mcx.space/wiki/upload/mcx24_logo.png)\n",
         "# MCX Training Workshop 2024 - Day 2, Session 2A\n",
         "\n",
-        "## Session 2A: MMC and Iso2Mesh Training\n"
+        "## Session 2A: Iso2Mesh Training\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> **Training Goals**: <font color='green'>In this unit, we create simple and complex tetrahedral meshes using our Iso2Mesh toolbox in Octave/MATLAB. Generating tetrahedral mesh is required for building mesh-based Monte Carlo (MMC) or finite-element based Redbird-m data analyses.</font>\n"
+      ],
+      "metadata": {
+        "id": "eD2_8MHdGJV2"
+      }
     },
     {
       "cell_type": "markdown",
@@ -37,9 +46,7 @@
         "- Oct2py Python module via `pip install oct2py`, and\n",
         "- enable Oct2py in Jupyter Notebook via \"magic command\" `%load_ext oct2py.ipython`\n",
         "\n",
-        "<font color='green'>If you run this on Google Colab, please go to menu **Edit\\Notebook Settings\\Hardware accelerator**, and verify if it has already selected \"GPU\"; if not, please select the T4 GPU.</font>\n",
-        "\n",
-        "**Please note**: MCX/MCXLAB is GPU-accelerated. This notebook by default requests an NVIDIA GPU. Howevever, when you click on the run-button for the below section, your browser may fail to allocate a GPU runtime and ask you if you want to continue with a non-GPU runtime. If you choose to proceed without GPU support, you will have to run the [section immediately following the next section](#mcx_setup_opencl) to install OpenCL-based MCXLAB (called mcxlabcl) and utilize the CPU to run the rest of the tutorials. The OpenCL version of MCXLAB will work for all examples, but will be substentially slower to run (this tutorial also reduces the photon numbers accordingly to lower the runtime)."
+        "This unit does not need GPU."
       ]
     },
     {
@@ -65,13 +72,15 @@
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcx/bin/mcx /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mmc/bin/mmc /usr/local/bin\n",
-        "! cp -a $PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex $PWD/MCXStudio/MATLAB/zmat/\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx\" /usr/local/bin\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl\" /usr/local/bin\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc\" /usr/local/bin\n",
+        "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
+        "# disable plotting brain mesh in octave, which is slow\n",
+        "! perl -pi -e 's/^plotmesh/% plotmesh/g' \"$PWD/MCXStudio/MATLAB/brain2mesh/examples/SPM_example_brain.m\"\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ ! -f `which nvidia-smi` ]] && sudo mv /usr/local/bin/mcxcl /usr/local/bin/mcx\n",
+        "! [[ ! -f `which nvidia-smi` ]] && mv /usr/local/bin/mcxcl /usr/local/bin/mcx\n",
         "#! mcx -L"
       ]
     },
@@ -86,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "IWg8T2-5SwT4"
       },
@@ -473,7 +482,7 @@
       "outputs": [],
       "source": [
         "%%octave -s 800,800\n",
-        "\n",
+        "# @markdown `surfboolean` supported Boolean operators\n",
         "boolopt='first' # @param ['and','or','diff','first','second','resolve','-union','-resolve','-first','-second']\n",
         "\n",
         "[no, fc]=surfboolean(nlayers, flayers, boolopt, ncyl, fcyl);\n",
@@ -754,7 +763,9 @@
         "> Tran AP+, Yan S+, Fang Q*, (2020) [“Improving model-based fNIRS analysis using mesh-based anatomical and light-transport models,\"](http://dx.doi.org/10.1117/1.NPh.7.1.015008) Neurophotonics, 7(1), 015008\n",
         "\n",
         "\n",
-        "Brain2mesh is rather a specialized Iso2Mesh processing pipeline for handling multi-layered embedded shells of closed surfaces, such as our brain."
+        "Brain2mesh is rather a specialized Iso2Mesh processing pipeline for handling multi-layered embedded shells of closed surfaces, such as our brain.\n",
+        "\n",
+        "The below example takes about 4 minutes to complete"
       ]
     },
     {
@@ -771,14 +782,13 @@
         "\n",
         "addpath([b2mfolder filesep 'examples']);\n",
         "\n",
-        "pkg load image  % load the\n",
+        "pkg load image  % load the octave-image toolbox which provides imfill.m\n",
         "which imfill\n",
         "\n",
         "which SPM_example_brain\n",
         "\n",
         "% this will take about 4 min for brain mesh generation (brain2mesh call)\n",
         "% 1 second for brain1020 calculations\n",
-        "% and another 1 min for rendering\n",
         "%% wait until the end\n",
         "\n",
         "SPM_example_brain\n",
@@ -868,7 +878,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNuymTzVrdwLX9aOoRJQtaq",
+      "authorship_tag": "ABX9TyMdD0o/mKWQKtiQvInApZPh",
       "include_colab_link": true
     },
     "kernelspec": {
