--- a/Training/MCX2024_2C_redbird_training.ipynb
+++ b/Training/MCX2024_2C_redbird_training.ipynb
@@ -29,6 +29,51 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ptMYeU1cGzsE"
+      },
+      "source": [
+        "![Workshop Logo](https://mcx.space/wiki/upload/mcx24_logo.png)\n",
+        "# MCX Training Workshop 2024 - Day 2, Session 2C\n",
+        "\n",
+        "## Session 2C: Redbird-m Training Part-1\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> **Training Goals**: <font color='green'>In this session you will learn how to:\n",
+        "1.   Setup the simulation environment in Redbird-m to perform forward simulations and reconstructions\n",
+        "2.   Run and visualize frequency domain (FD) or continuous wave (CW) forward simulations in Redbird-m using point-source/detector arrays and wide-field source/detector patterns\n",
+        "3.   Visualize the simulated data (amplitude and/or phase) and the sensitivity matrix\n",
+        "</fonts>\n"
+      ],
+      "metadata": {
+        "id": "MxKxY9WRdK4g"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# <font color='orange'>Step 0: Setting up MCX and Octave environments within Google Colab</font>\n",
+        "\n",
+        "> **You must rerun all cells in Step 0 in appearance order when you start a new session, or after reconnect to a runtime**\n",
+        "\n",
+        "To run interactive Octave sessions inside a Google Colab Jupyter Notebook environment, we need to install the following dependencies\n",
+        "- GNU Octave via `sudo apt-get install octave`\n",
+        "- Oct2py Python module via `pip install oct2py`, and\n",
+        "- enable Oct2py in Jupyter Notebook via \"magic command\" `%load_ext oct2py.ipython`\n",
+        "\n",
+        "<font color='green'>If you run this on Google Colab, please go to menu **Edit\\Notebook Settings\\Hardware accelerator**, and verify if it has already selected \"GPU\"; if not, please select the T4 GPU.</font>\n",
+        "\n",
+        "**Please note**: MCX/MCXLAB is GPU-accelerated. This notebook by default requests an NVIDIA GPU. Howevever, when you click on the run-button for the below section, your browser may fail to allocate a GPU runtime and ask you if you want to continue with a non-GPU runtime. If you choose to proceed without GPU support, you will have to run the [section immediately following the next section](#mcx_setup_opencl) to install OpenCL-based MCXLAB (called mcxlabcl) and utilize the CPU to run the rest of the tutorials. The OpenCL version of MCXLAB will work for all examples, but will be substentially slower to run (this tutorial also reduces the photon numbers accordingly to lower the runtime)."
+      ],
+      "metadata": {
+        "id": "2S9sY9AlHwdm"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -37,33 +82,44 @@
       },
       "outputs": [],
       "source": [
-        "!#@title Init 1: Initial setup of environment for running MCXLAB (run the below section once)\n",
+        "#@title <font color='orange'>Init 1: Initial setup of environment for running MCXLAB (run the below section once)</font>\n",
+        "\n",
         "# install octave and oct2py\n",
         "! sudo apt-get update && sudo apt-get install octave jq libpocl2 pocl-opencl-icd    # install octave (a free matlab clone)\n",
         "! pip install oct2py jdata bjdata matplotlib   # install oct2py, jdata, bjdata and matplotlib Python modules\n",
-        "#!apt-get install nvidia-opencl-icd-384        # optional: install nvidia OpenCL(+2min), needed for mmc/mmclab demos later\n",
+        "\n",
         "# add octave support to colab notebook\n",
         "%load_ext oct2py.ipython\n",
         "# download and unzip mcxlab\n",
-        "! rm -rf mcxlab*\n",
-        "! wget https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip  # download MCX suite\n",
+        "! rm -rf MCXStudio*\n",
+        "! curl https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip -O MCXStudio-linux-x86_64-nightlybuild.zip # download MCX suite\n",
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcx/bin/mcx /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mmc/bin/mmc /usr/local/bin\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
+        "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ ! -f `which nvidia-smi` ]] && sudo mv /usr/local/bin/mcxcl /usr/local/bin/mcx\n",
+        "! [[ ! -f `which nvidia-smi` ]] && mv \"/usr/local/bin/mcxcl\" \"/usr/local/bin/mcx\"\n",
         "! mcx -L"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font color='orange'>Init 2: Only need to run this once at the beginning</font>"
+      ],
+      "metadata": {
+        "id": "jIuLDuAiRU8E"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "%%octave\n",
         "\n",
-        "addpath([pwd filesep 'MCXStudio/MATLAB/redbird-m' filesep 'matlab']); % add path to redbird-m\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/mcxlab']);                     % add path to mcxlab\n",
         "addpath([pwd filesep 'MCXStudio/MCXSuite/mcx' filesep 'utils']);      % add path to mcx helper functions\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/mmclab']);                     % add path to mmclab\n",
@@ -71,6 +127,7 @@
         "addpath([pwd filesep 'MCXStudio/MATLAB/iso2mesh']);                   % add path to iso2mesh/jsonlab\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/brain2mesh']);                 % add path to brain2mesh\n",
         "addpath([pwd filesep 'MCXStudio/MATLAB/zmat']);                       % add path to zmat for data compression\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/redbird-m/matlab']);           % add path to redbird-m\n",
         "\n",
         "struct_levels_to_print(0);\n",
         "print_struct_array_contents(0);\n",
@@ -89,17 +146,31 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Take home messages:**\n",
+        "### <font color='orange'>Init 3: Verify your environments</font>\n",
         "\n",
-        "In this session you will learn how to:\n",
-        "\n",
-        "1.   Setup the simulation environment in Redbird-m to perform forward simulations and reconstructions\n",
-        "2.   Run and visualize frequency domain (FD) or continuous wave (CW) forward simulations in Redbird-m using point-source/detector arrays and wide-field source/detector patterns\n",
-        "3.   Visualize the simulated data (amplitude and/or phase) and the sensitivity matrix\n"
+        "---"
       ],
       "metadata": {
-        "id": "MxKxY9WRdK4g"
+        "id": "oPiJ3kcF4MK2"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%octave\n",
+        "\n",
+        "which mcx\n",
+        "which s2m\n",
+        "which zipmat\n",
+        "\n",
+        "mcxlab('gpuinfo')     % use this command to list supported CPU or GPU in octave\n",
+        "unix('mcx -L')        % use -L flag to list GPU in the command line"
+      ],
+      "metadata": {
+        "id": "LnrnJOcJsQzW"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
