--- a/Training/MCX2024_2D_multi_spectral_redbird.ipynb
+++ b/Training/MCX2024_2D_multi_spectral_redbird.ipynb
@@ -41,8 +41,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> **Training Goals**: <font color='green'>In this session you will learn how to:\n",
-        "1) setup the simulation environment in Redbird-m to perform FD/CW multi-spectral reconstructions, 2) Setup the simulation environment in Redbird-m to perform bybrid FD + CW multi-spectral reconstructions, 3) run and visualize frequency domain (FD) or continuous wave (CW) forward simulations in Redbird-m using point-source/detector arrays and wide-field source/detector patterns, and 4) Visualize the simulated data (amplitude and/or phase) and the sensitivity matrix</fonts>\n"
+        "> **Training Goals**: <font color='green'>In this session you will learn how to: 1) setup the simulation environment in Redbird-m to perform FD/CW multi-spectral reconstructions, 2) Setup the simulation environment in Redbird-m to perform bybrid FD + CW multi-spectral reconstructions, 3) run and visualize frequency domain (FD) or continuous wave (CW) forward simulations in Redbird-m using point-source/detector arrays and wide-field source/detector patterns, and 4) Visualize the simulated data (amplitude and/or phase) and the sensitivity matrix</fonts>\n"
       ],
       "metadata": {
         "id": "MxKxY9WRdK4g"
