add quotes in the setup script

--- a/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
+++ b/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOQEF8Ql24fFRHenZgdrK6E",
+      "authorship_tag": "ABX9TyPtpnOztTWbo4OBhD1lEvF/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -167,17 +167,17 @@
         "\n",
         "# download and unzip MCXStudio\n",
         "! rm -rf MCXStudio*\n",
-        "! wget https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip  # download MCX suite\n",
+        "! curl https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip -O MCXStudio-linux-x86_64-nightlybuild.zip # download MCX suite\n",
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcx/bin/mcx /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mmc/bin/mmc /usr/local/bin\n",
-        "! cp -a $PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex $PWD/MCXStudio/MATLAB/zmat/\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ ! -f `which nvidia-smi` ]] && sudo mv /usr/local/bin/mcxcl /usr/local/bin/mcx\n",
+        "! [[ ! -f `which nvidia-smi` ]] && mv \"/usr/local/bin/mcxcl\" \"/usr/local/bin/mcx\"\n",
         "! mcx -L"
       ]
     },
@@ -261,8 +261,7 @@
         "- if you receive an error that you can not allocate a new GPU runtime, please close all your previously opened sessions via Runtime/Manage sessions menu, and disconnect and delete previous sessions.\n",
         "- if you run out of compute units, please go to https://colab.research.google.com/signup and purchase new compute units\n",
         "- if for some reason, a cell hangs while running (takes more than few min without responses), please select the runtime drop-down menu and select \"Disconnect and delete runtime\" - or double click on the run-button, it will ask you to reset the runtime. Once you reconnect or reset the runtime, you must rerun the initial setup script in **Step 0** at the beginning.\n",
-        "- if any of the code section returns an error that a command is not found, very likely you did not run the initial setup section in Step 0, or you type MATLAB/Octave commands in a Python cell, or vice versa.\n",
-        ""
+        "- if any of the code section returns an error that a command is not found, very likely you did not run the initial setup section in Step 0, or you type MATLAB/Octave commands in a Python cell, or vice versa.\n"
       ],
       "metadata": {
         "id": "76vaQXV9u14i"
