--- a/Training/MCX2024_1D_mcxlab_training.ipynb
+++ b/Training/MCX2024_1D_mcxlab_training.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP7PwZqYM4fzVwJGpHCsaRI",
+      "authorship_tag": "ABX9TyN3M8vpTD0sUPNzd3lfbzXt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -666,7 +666,7 @@
       "metadata": {
         "id": "qkNWl6QIqvd9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -756,7 +756,7 @@
         "id": "_S_R3GZC31e0",
         "outputId": "75f42680-afec-485c-c155-38198ff222ce"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1036,7 +1036,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Note: Below simulation will launch 71 simulations, sweeping between 300 nm and 1000 nm with a 10 nm step. Each simulation takes about 3 seconds to complete, so overall, you ned to wait for 2-3 minutes for the simulation to complete."
+        "Note: Below simulation will launch 71 simulations, sweeping between 300 nm and 1000 nm with a 10 nm step. Each simulation takes about 2 seconds to complete, so overall, you ned to wait for ~2 minutes for the simulation to complete."
       ],
       "metadata": {
         "id": "yQ_RL2LoP7Lv"
@@ -1047,167 +1047,125 @@
       "source": [
         "%%octave\n",
         "\n",
-        "% runMCXSpectrum_skin1Dreflectance.m\n",
-        "%   Create total reflectance spectrum (300:10:1000nm)\n",
-        "%   for total diffuse reflectance from infintely broad beam.\n",
-        "%   Skin layers:\n",
-        "%       epidermis\n",
-        "%       papillary dermis\n",
-        "%       vasular plexus\n",
-        "%       reticular dermis (semi-infinite thickness)\n",
+        "% runMCXspectrum_Skin29aprWorkshop.m\n",
+        "%   Simulation of skin reflectance and transmittance\n",
+        "%   from a layered skisn:\n",
+        "%       epidermis           60 um\n",
+        "%       papillary dermis    200 um\n",
+        "%       superficial vascular plexus 200 um\n",
+        "%       reticular dermis     currently 0.52 mm, can be made thicker\n",
+        "%   Calculates reflectancer R and transmittance T,\n",
+        "%   also fluence rate phi(z,x), R(y,x), and T(y,x), all in [mm^2].\n",
         "%   USES:\n",
         "%       SpectralLIBMUmm.mat\n",
         "%       makeTissueList_skin.m\n",
-        "%       mcxlab_exec4_draw.m\n",
         "%\n",
-        "%%% 17june2024.sljacques\n",
+        "% slj29apr2024\n",
         "\n",
         "clear cfg label prop\n",
         "close all\n",
         "\n",
-        "%% load Spectral Absorption Library: nmLIB(701,1), MUY(701,6), msg\n",
-        "%   MU(:,[oxyB deoxyB Water Carotenoids Melanin Fat])\n",
-        "%   oxyB, deoxyB = mu_a of whole blood (~45% hematocrit=150 g.HGb/liter, MW.HGb = 64500g/mole)\n",
-        "%       https://omlc.org/spectra/hemoglobin/summary.html\n",
-        "%   Water = mu_a of pure water\n",
-        "%    \tG. M. Hale and M. R. Querry, \"Optical constants of water in the 200nm to\n",
-        "%       200-um wavelength region,\" Appl. Opt., 12, 555--563, (1973).\n",
-        "%   Carotenoids = ( exp(-((nmLIB-476)/45).^2) + 1.5*exp(-((nmLIB-440)/30).^2) )/2.0824\n",
-        "%       such that max of mua_a.carotenoids = 1.0 [1/mm] @446nm.Then scale as needed.\n",
-        "%   Melanin = mu_a of interior of cutaneous melanosome\n",
-        "%       mu_a.melanosome = (67.92/mm)*(nmLIB/500nm).^(-3.33)\n",
-        "%   Fat = mu_a of fat.  Data for pure lipid purified from pig fat.\n",
-        "%     \tvan Veen R.L.P. , H.J.C.M. Sterenborg, A. Pifferi, A. Torricelli,\n",
-        "%       R. Cubeddu: Determination of VIS- NIR absorption coefficients\n",
-        "%       of mammalian fat, with time- and spatially resolved diffuse\n",
-        "%       reflectance and transmission spectroscopy,\n",
-        "%       OSA Annual BIOMED Topical Meeting, 2004.\n",
         "\n",
         "load SpectralLIBMUmm.mat\n",
-        "msg\n",
-        "whos nmLIB MU\n",
         "\n",
-        "label(1).s='oxy whole blood';\n",
-        "label(2).s='deoxy whole blood';\n",
-        "label(3).s='water';\n",
-        "label(4).s='carotenoids';\n",
-        "label(5).s='melanosome';\n",
-        "label(6).s='fat';\n",
+        "%% %%%%\n",
+        "% USER CHOICES\n",
+        "%%%\n",
         "\n",
-        "figure;clf\n",
+        "%%%%%%\n",
+        "%# @markdown wavelength step size (in nm)\n",
+        "nmstep=10 # @param {type:\"slider\",min:10,max:100,step:10}\n",
         "\n",
-        "clr='rbcgkm';\n",
-        "f=2;\n",
-        "for i=1:6\n",
-        "    semilogy(nmLIB,MU(:,i),'-','color',clr(i),'linewidth',2)\n",
-        "    hold on\n",
-        "    text(800,5e-4/f^i,label(i).s,'color',clr(i),'fontsize',12)\n",
-        "end\n",
-        "set(gca,'fontsize',14)\n",
-        "xlabel('Wavelength [nm]')\n",
-        "ylabel('\\mu_a [1/mm]')\n",
-        "title('SpectralLIBMUmm.mat')\n",
-        "axis([300 1000 1e-6 1e3])\n",
+        "nm = [300:nmstep:1000]';\n",
+        "Nnm = length(nm);\n",
+        "MU2 = interp1(nmLIB,MU,nm); % <--- interpolate properties\n",
         "\n",
-        "%%% Wavelength range for simulations\n",
-        "\n",
-        "nmstep=20 # @param {type:\"slider\",min:10,max:100,step:10}\n",
-        "\n",
-        "nmm = [300:nmstep:1000]';\n",
-        "Nnm = length(nmm);\n",
-        "MU2 = interp1(nmLIB,MU,nmm); % <--- interpolate properties\n",
-        "\n",
-        "\n",
-        "%%% volume size and unitinmm\n",
-        "Ny=100; Nx=100; Nz=500;\n",
         "dxyz = 0.010; % mm\n",
+        "Ny=100; Nx=100; Nz=100;  % Set Nz = 5000 to mimic semi-infinite tissue\n",
         "\n",
+        "% a uniform planar source outside the volume\n",
+        "w   = Nx/2; % width [grid units]\n",
+        "hw  = w/2; % half-width\n",
         "\n",
-        "%% % create cfg files\n",
-        "cfg.tstart = 0;\n",
-        "cfg.tend   = 5e-9;\n",
-        "cfg.tstep  = 5e-9;\n",
-        "cfg.isreflect = 1; % enable total internal reflection at exterior boundary\n",
-        "cfg.issaveref = 1; % enable saving escaping light as reflectance\n",
+        "%% % create cfg file\n",
+        "cfg.nphoton     = 1e4; % <---- # of photons\n",
+        "cfg.unitinmm    = dxyz; % mm\n",
+        "cfg.tstart      = 0;\n",
+        "cfg.tend        = 5e-9;\n",
+        "cfg.tstep       = 5e-9;\n",
+        "cfg.isreflect   = 1; % enable internal reflectance at exterior boundary\n",
+        "cfg.issaveref   = 1; % save escaping reflectance\n",
+        "cfg.srctype     = 'disk';     % uniform planar source\n",
+        "cfg.srcdir      = [0 0 1];    \t% [ux uy uz] = cosine of directions of delivery = along z\n",
+        "cfg.srcpos      = [Nx/2 Ny/2 0];\n",
+        "cfg.srcparam1   = [hw 0 0 0];\n",
+        "cfg.srcparam2   = [0 hw 0 0];\n",
+        "cfg.bc          = 'ccrccr'; % cylic edges, reflective top,rear\n",
         "\n",
-        "cfg.unitinmm = dxyz; % mm\n",
+        "% specify skin layer thicknesses [mm]\n",
+        "d123    = [0.060 0.200 0.200];      % epi pap plx = layers 1,2,3\n",
+        "d4      = (Nz-2)*dxyz - sum(d123);\t% ret = layer 4\n",
+        "d       = [d123 d4];               \t% epi pap plx ret [mm]\n",
         "\n",
-        "% a uniform planar source illuminating entire top surface of the volume\n",
-        "% cyclic side boundaries mimic infinitely broad beam\n",
-        "w=Nx;   % width [units]\n",
-        "hw=w/2; % half-width\n",
-        "cfg.srctype     = 'planar';\n",
-        "cfg.srcdir      = [0 0 1]; % incident along z-axis\n",
-        "cfg.srcpos      = [Nx/2-hw Ny/2-hw 0];\n",
-        "cfg.srcparam1   = [w 0 0 0];\n",
-        "cfg.srcparam2   = [0 w 0 0];\n",
-        "cfg.bc='ccrccr'; % cyclic side boundaries\n",
-        "\n",
-        "cfg.nphoton     = 1e4; % <---- # of photons per wavelength\n",
-        "%cfg.debuglevel  = 'P';\n",
-        "\n",
-        "%% thicknesses of each skin tissue layer\n",
-        "%   epi = epidermis (60 um]\n",
-        "%   pap = papillary dermis (200 um)\n",
-        "%   plx = superficial vascular plexus (200 um)\n",
-        "%   ret = reticular dermis (remaining volume)\n",
-        "d123 = [0.060 0.200 0.200];     % epi pap plx\n",
-        "d4 = (Nz-2)*dxyz - sum(d123);   % ret\n",
-        "d  = [d123 d4];                 % epi pap plx ret [mm]\n",
-        "nd = round(d/dxyz);             % nd(4,1) = dimensionless units of thickness\n",
-        "csd = cumsum(d);\n",
-        "\n",
-        "%% Simulation for each wavelength\n",
         "tic\n",
         "for inm=1:Nnm\n",
-        "    nm = nmm(inm); % wavelength\n",
+        "    nm1 = nm(inm); % one wavelength\n",
         "    clc\n",
-        "    fprintf('\\n\\nwavelength = %0.0f nm\\n\\n',nm)\n",
+        "    fprintf('\\n\\nWavelength = %0.0f nm\\n\\n',nm1)\n",
         "\n",
-        "    % tissue layer properties : epi pap plx ret\n",
+        "    % specify tissue layer properties\n",
         "    PRINTON=0;\n",
-        "    tissue = makeTissueList_skin(nm, MU2(inm,:), PRINTON);\n",
+        "    tissue = makeTissueList_skin(nm1, MU2(inm,:), PRINTON);\n",
         "    prop(1,:)=[0 0 1 1]; % outer boundary [mua mus g n]\n",
-        "    for i=1:4 % i--> epi pap plx ret\n",
+        "\n",
+        "    for i=1:4 % epi pap plx ret\n",
         "        mua = tissue(i).mua;\n",
         "        mus = tissue(i).mus;\n",
         "        g   = tissue(i).g;\n",
         "        n   = tissue(i).n;\n",
         "        prop(i+1,:) = [mua mus g n];\n",
         "    end\n",
-        "    prop(6,:) = [mua*1e3 mus*1e3 g n]; % mimic semi-infinite tissue\n",
+        "\n",
+        "    prop(5+1,:) = [mua*1e3 mus*1e3 g n];% 6=mimic semi-infinite dermis\n",
+        "        % 2=epidermis\n",
+        "        % 3=papillary dermis\n",
+        "        % 4=vascular plexus\n",
+        "        % 5=reticular dermis\n",
+        "        % 6=semi-infinite dermis\n",
+        "\n",
         "    cfg.prop = prop;\n",
         "\n",
-        "\t  % tissue volume\n",
-        "    % define a 4 layer structure\n",
-        "    % cfg.vol uses 0-->4 (C-code) to point to props(1-->5) (MATLAB)\n",
-        "    cfg.vol = uint8(zeros(Nx,Ny,Nz));        % boundary    0 --> prop(1,:)\n",
-        "    cfg.vol(:,:,1+[1:nd(1)])=1;              % epidermis,  1 --> prop(2,:)\n",
-        "    cfg.vol(:,:,1+nd(1)+[1:nd(2)])=2;        % pap.dermis, 2 --> prop(3,:)\n",
-        "    cfg.vol(:,:,1+sum(nd(1:2))+[1:nd(3)])=3; % plexis,     3 --> prop(4,:)\n",
-        "    cfg.vol(:,:,1+sum(nd(1:3))+[1:nd(4)])=4; % ret.dermis, 4 --> prop(5,:)\n",
-        "    cfg.vol(:,:,Nz-10:Nz-1) = 5; % mimic semi-infinite tissue 5 --> prop(6,:)\n",
-        "    cfg.vol(:,:,Nz) = 1;                     % rear boundary  0 --> prop(1,:)\n",
+        "    % fill tissue volume\n",
+        "    % MCX uses C-code so i=1 --> i==2 in MATLAB used by mcxlab.m\n",
+        "    nd      = round(d/dxyz); % nd(4,1) = thicknesses in [units]\n",
+        "    cfg.vol = uint8(zeros(Nx,Ny,Nz));\n",
+        "                                              % C-code i --> MATLAB i+1\n",
+        "    cfg.vol(:,:,1)                       = 0; % boundary    0 --> prop(1,:)\n",
+        "    cfg.vol(:,:,1+[1:nd(1)])             = 1; % epidermis,  1 --> prop(2,:)\n",
+        "    cfg.vol(:,:,1+nd(1)+[1:nd(2)])       = 2; % pap.dermis, 2 --> prop(3,:)\n",
+        "    cfg.vol(:,:,1+sum(nd(1:2))+[1:nd(3)])= 3; % plexus,     3 --> prop(4,:)\n",
+        "    cfg.vol(:,:,1+sum(nd(1:3))+[1:nd(4)])= 4; % ret.dermis, 4 --> prop(5,:)\n",
+        "    cfg.vol(:,:,Nz-11:Nz-1)              = 5  % semiinfinite5 ..> prop(6,:)\n",
+        "    cfg.vol(:,:,Nz)                      = 0; % boundary    0 --> prop(1,:)\n",
         "\n",
-        "    flux=mcxlab(cfg);                        % <---- MCX --- RUN SIMULATION\n",
+        "    flux = mcxlab(cfg); % <---- MCX ---\n",
         "\n",
-        "    Rxy       = flux.dref(:,:,1) *cfg.tstep*cfg.unitinmm^2;\n",
+        "    Rxy       = flux.dref(:,:,1)*cfg.tstep*cfg.unitinmm^2;\n",
         "    Txy       = flux.dref(:,:,Nz)*cfg.tstep*cfg.unitinmm^2;\n",
         "    R(inm,1)  = sum( Rxy(:));\n",
         "    T(inm,1)  = sum( Txy(:));\n",
         "\n",
+        "    if nm1==500\n",
+        "        Fzx500 = squeeze(flux.data(:,Ny/2,:))'*cfg.tstep*cfg.unitinmm^2;\n",
+        "        Ryx500 = Rxy';\n",
+        "        Tyx500 = Txy';\n",
+        "    end\n",
+        "\n",
         "end % inm\n",
-        "toc\n",
-        "\n",
-        "\n",
-        "%% show tissue parameters @ 500 nm\n",
-        "inm=find(nmm==500);\n",
-        "PRINTON=1;\n",
-        "fprintf('\\nparameters and optical properties @ 500nm\\n')\n",
-        "makeTissueList_skin(500,MU2(inm,:),PRINTON);"
+        "toc\n"
       ],
       "metadata": {
-        "id": "FNV-olxjB-jq"
+        "id": "Wr2wyn8VQ47i"
       },
       "execution_count": null,
       "outputs": []
@@ -1224,91 +1182,42 @@
     {
       "cell_type": "code",
       "source": [
-        "%%octave\n",
+        "%%octave -s 600,600\n",
         "\n",
-        "% plotting the results\n",
+        "%% Draw figures\n",
         "\n",
-        "close all\n",
+        "x = ([1:Nx]-Nx/2)*cfg.unitinmm;\n",
+        "y = x;\n",
+        "z = [1:Nz]*cfg.unitinmm;\n",
         "\n",
-        "%% Show depth-profile of tissue layers\n",
-        "figure;clf\n",
-        "%sz0 = get(0,'screensize')/2;\n",
-        "%pos = round([0.129 0.171 0.7 1.6].*sz0([3 4 3 4]));\n",
-        "%set(figure(1),'position',pos)\n",
+        "figure(1);clf\n",
         "\n",
-        "fz=12; % fontsize for labels\n",
-        "\n",
-        "subplot(211)\n",
-        "plot([1:Nz]',squeeze(cfg.vol(Nx/2,Ny/2,:)),'ro-')\n",
-        "hold on\n",
-        "text(1,.15,'air boundary=0 @ iz=1','fontsize',fz)\n",
-        "for i=1:3\n",
-        "    if i==1 % epidermis\n",
-        "        iz1=2;\n",
-        "    else\n",
-        "        iz1=2+sum(nd(1:i-1));\n",
-        "    end\n",
-        "    z1=dxyz*(iz1-1);\n",
-        "    iz2=1+sum(nd(1:i));\n",
-        "    z2=dxyz*(iz2-1);\n",
-        "    s=sprintf('%s %d%s%d (%0.3f %s %0.3f mm)',...\n",
-        "    tissue(i).name,iz1,'\\rightarrow',iz2,...\n",
-        "    z1,'\\rightarrow',z2);\n",
-        "    text((3+sum(nd(1:i))),i,s,'fontsize',fz)\n",
-        "end\n",
-        "i=4;\n",
-        "iz1=i+sum(nd(1:i-1));\n",
-        "z1=dxyz*(iz1-1);\n",
-        "iz2=i-3+sum(nd(1:i));\n",
-        "z2=dxyz*(iz2);\n",
-        "s=sprintf('%s %d%s%d (%0.3f %s %0.3f mm)',...\n",
-        "tissue(i).name,iz1,'\\rightarrow',iz2,...\n",
-        "z1,'\\rightarrow',z2);\n",
-        "text(35,i-.2,s,'fontsize',fz)\n",
-        "\n",
-        "xlabel('depth pointer, iz')\n",
-        "ylabel('tissue type')\n",
-        "set(gca,'fontsize',16)\n",
-        "axis([0 100 0 5])\n",
-        "\n",
-        "%% Show side-view of tissue layers\n",
-        "subplot(212)\n",
-        "\n",
-        "Vzx=squeeze(cfg.vol(:,Ny/2,:))';\n",
-        "imagesc([1:Nx]*dxyz,[1:Nz]*dxyz,Vzx)\n",
-        "hold on\n",
-        "text(0.05,0.045,'epidermis','fontsize',14,'color','w')\n",
-        "text(0.05,.15,'papillary dermis','fontsize',14)\n",
-        "text(0.05,0.34,'vascular plexus','fontsize',14)\n",
-        "text(0.05,0.6,'reticular dermis','fontsize',14)\n",
-        "\n",
+        "imagesc(x,z,(Fzx500));\n",
         "colorbar\n",
-        "axis([dxyz 1 dxyz 1])\n",
-        "\n",
-        "%% Plot R,T spectra\n",
-        "figure;clf\n",
-        "%sz0 = get(0,'screensize')/2;\n",
-        "%pos = round([0.918 0.171 0.700 1.6].*sz0([3 4 3 4]));\n",
-        "%set(figure(2),'position',pos)\n",
-        "\n",
-        "subplot(211)\n",
-        "\n",
-        "imagesc(Rxy)\n",
+        "xlabel('x [mm]');\n",
+        "ylabel('z [mm]');\n",
+        "title('log_{10}( Fluence(z,x)@y=0 [mm^2] ) @ 500nm','fontweight','normal')\n",
+        "set(gca,'fontsize',16)\n",
         "axis equal\n",
-        "xlabel('x [mm]')\n",
-        "ylabel('y [mm]')\n",
-        "title('R(y,x) [mm^{-2}]')\n",
-        "colorbar\n",
         "\n",
-        "subplot(212)\n",
-        "plot(nmm,R,'ro-','linewidth',2)\n",
-        "hold on\n",
-        "plot(nmm,T,'bo-','linewidth',2)\n",
-        "xlabel('Wavelength')\n",
-        "ylabel('R_d, T_t')\n",
-        "title('skin: epi,pap,plx,ret','fontweight','normal')\n",
+        "figure(2);clf\n",
+        "\n",
+        "imagesc(x,y,Ryx500);\n",
+        "colorbar\n",
+        "xlabel('x [mm]');\n",
+        "ylabel('y [mm]');\n",
+        "title('R(y,x) [mm^2] @ 500nm','fontweight','normal')\n",
         "set(gca,'fontsize',16)\n",
-        "axis([300 1000 0 1])"
+        "\n",
+        "figure(3);clf\n",
+        "\n",
+        "plot(nm,R,'ro-','linewidth',2)\n",
+        "hold on\n",
+        "plot(nm,T,'bo-','linewidth',2)\n",
+        "xlabel('Wavelength [nm]');\n",
+        "ylabel('R');\n",
+        "set(gca,'fontsize',16)\n",
+        "axis([300 1000 0 1])\n"
       ],
       "metadata": {
         "id": "ITASIqJM-vgr"
