Broke down pattern source section into subsections

--- a/Training/MCX2024_2B_mmc_training.ipynb
+++ b/Training/MCX2024_2B_mmc_training.ipynb
@@ -1210,24 +1210,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Produce slab mesh with property IDs"
+      ],
+      "metadata": {
+        "id": "BfqjCF8etNd4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "%%octave\n",
-        "\n",
-        "%%-----------------------------------------------------------------\n",
-        "%% Simulating an SFDI source with a 2-layer brain model\n",
-        "%%-----------------------------------------------------------------\n",
-        "%\n",
-        "% In this example, we simulate an spatial-frequency domain imaging source\n",
-        "% using a 2-layer brain model.\n",
-        "%\n",
-        "% The cubic domain has a dimension of 60x60x30 mm with the 5mm top layer\n",
-        "% simulating the skull/scalp while the bottom 25mm layer simulating gray\n",
-        "% and white matters. The sample SFDI covers a 40 x 40 mm area from the top,\n",
-        "% and has kx=3 with a pi/3 phase offset in the x-direction.\n",
-        "%\n",
-        "%%-----------------------------------------------------------------\n",
-        "\n",
         "clear cfg;\n",
         "clear all;\n",
         "\n",
@@ -1249,13 +1242,33 @@
         "end\n",
         "[cfg.node,cfg.elem]=surf2mesh(node,face,[],[],1,[],c0);\n",
         "\n",
-        "figure;\n",
-        "subplot(121);\n",
-        "plotmesh(cfg.node,cfg.elem);\n",
-        "\n",
         "cfg.elemprop=cfg.elem(:,5);\n",
         "cfg.elem=cfg.elem(:,1:4);\n",
         "\n",
+        "figure;\n",
+        "subplot(121);\n",
+        "plotmesh(cfg.node,cfg.elem);"
+      ],
+      "metadata": {
+        "id": "F6c9uiAItK46"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Set up pattern source"
+      ],
+      "metadata": {
+        "id": "IItnO_EDubv_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "%%octave\n",
         "\n",
         "%% add source and retessellate mesh\n",
         "\n",
@@ -1274,7 +1287,28 @@
         "    'srcparam1',cfg.srcparam1,'srcparam2',cfg.srcparam2);\n",
         "\n",
         "[cfg.node,cfg.elem] = mmcaddsrc(cfg.node,[cfg.elem cfg.elemprop],...\n",
-        "    mmcsrcdomain(srcdef,[min(cfg.node);max(cfg.node)]));\n",
+        "    mmcsrcdomain(srcdef,[min(cfg.node);max(cfg.node)]));"
+      ],
+      "metadata": {
+        "id": "jiT3Buv2uXtV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Set up other config settings and run simulation"
+      ],
+      "metadata": {
+        "id": "-NbIfyVlukst"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "%%octave\n",
         "\n",
         "cfg.elemprop=cfg.elem(:,5);\n",
         "cfg.elem=cfg.elem(:,1:4);\n",
@@ -1298,7 +1332,27 @@
         "layer=mmclab(cfg);\n",
         "%cube=mmclab(cfg,'sse'); % this is faster\n",
         "layer=layer.data;\n",
-        "layercw=sum(layer,2);\n",
+        "layercw=sum(layer,2);"
+      ],
+      "metadata": {
+        "id": "uuaxR7sBtuWw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Plot widefield results"
+      ],
+      "metadata": {
+        "id": "fm8iN7brtysq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%octave\n",
         "\n",
         "% plot simulated photon profiles\n",
         "\n",
