--- a/Training/MCX2024_1E_pmcx_training.ipynb
+++ b/Training/MCX2024_1E_pmcx_training.ipynb
@@ -142,7 +142,7 @@
         "  * MATLAB array index starts from 1, whereas Python/numpy array index starts from 0.\n",
         "  * In MCXLAB, the number of requested output parameters automatically decides whether to save detected photon, or seeds or trajectories; unfortunately Python does not expose output variable number to a function; therefore, to enable/disable certain outputs, one must sets the appropriate cfg flags (such as `cfg['issavedet']` or `cfg['issaveseed']`.\n",
         "\n",
-        "`pmcx` allows users to run mcx simulation in Python environment, seamlessly connecting with the data analysis tools provided in Python. `pmcx` also handles both column-major input and row-major input.\n",
+        "`pmcx` allows users to run mcx simulation in Python environment, seamlessly connecting with the data analysis tools provided in Python.\n",
         "\n",
         "There are two main ways to run `pmcx`:\n",
         "1. using cfg as a dictionary variable:\n",
